patch - ways to integrate refactor

--- a/docs/api-specification/transactions.mdx
+++ b/docs/api-specification/transactions.mdx
@@ -53,7 +53,7 @@ There are five transaction types (ZumRailsType):
 :::
 
 :::info
-- Credit Card transactions are settled directly into the merchant account. Hence, it is not required to specify the WalletId or FundingSourceId while creating a credit card transaction
+- Credit Card transactions are settled directly into the merchant account. Hence, it is not required to specify the `WalletId` or `FundingSourceId` while creating a credit card transaction
 :::
 
 ![Zum Payment Methods](/img/docs/diagrams/payment_methods_v2.png)
