patch - fix on typo

--- a/docs/ways-to-integrate/zum-connect.mdx
+++ b/docs/ways-to-integrate/zum-connect.mdx
@@ -191,7 +191,7 @@ The Iframe will display the products/prices to the user and they can choose what
 In case of subscription, a new invoice will be generated based on the billing cycle. Whenever a new invoice is generated we will automatically charge the payment method that was used when creating the subscription using the checkout link.
 :::
 
-### Subscription checkout using URL:
+### Subscription checkout using URL
 ### Event Listener
 When a new subscription is created through checkout, Zũm Connect will trigger an event to provide to your application the UserId, TransactionId or subscriptionId.
 
