patch - replace Zum by Zūm

--- a/docs/api-specification/api-introduction.mdx
+++ b/docs/api-specification/api-introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: API Introduction
 description:
-  How the Zum API integration works.
+  How the Zūm API integration works.
 ---
 
 # Api Introduction
