--- a/docs/api-specification/products.mdx
+++ b/docs/api-specification/products.mdx
@@ -5,7 +5,7 @@ description:
 ---
 
 #Products
-At Zum Rails one product can have one or more prices, these are called product prices and need to be informed at the moment of creating a product. Product prices can have different types of configurations such as Pricing Model and Frequency.
+At Zūm Rails one product can have one or more prices, these are called product prices and need to be informed at the moment of creating a product. Product prices can have different types of configurations such as Pricing Model and Frequency.
 
 **Pricing Models Types**
 
