--- a/docs/api-specification/subscriptions.mdx
+++ b/docs/api-specification/subscriptions.mdx
@@ -209,7 +209,7 @@ ProductStatus           | string        | Product status
 CustomerId              | guid          | Id for the related customer
 
 ## Update a subscription
-Zum supports changing existing subscriptions without having to cancel and recreate them. Some of the most significant changes you might make are:
+Zūm supports changing existing subscriptions without having to cancel and recreate them. Some of the most significant changes you might make are:
 
 Changing the quantity of products within the subscription
 Changing the method/way of payment collection
