--- a/docs/basic-concepts/moving-funds.mdx
+++ b/docs/basic-concepts/moving-funds.mdx
@@ -1,14 +1,14 @@
 ---
 title: Moving Funds
 description:
-  How moving funds works on Canada and Zum.
+  How moving funds works on Canada and Zūm.
 ---
 
 Zūm Rails and its direct integration to its partners allow funds to move more quickly than anyone else in Canada with visibility over the status of each transaction. That means there is **no waiting 2-3 days** just to find out whether a transaction is successful.
 
 Funds are moved between 3 stakeholders: 
 
-![Zum Payment Methods](/img/docs/diagrams/stakeholders_v2.png)
+![Zūm Payment Methods](/img/docs/diagrams/stakeholders_v2.png)
 
 - **Funding Source**: This is your business bank account, to be able to start moving funds you will need to link your bank account information using Zūm Portal.
 - **Zūm Wallet**: This is a virtual account you can use to manage funds. If you need to move funds directly from a Funding Source to User, or the opposite, the funds will pass through Zūm Wallet automatically.
