--- a/docs/basic-concepts/payment-methods.mdx
+++ b/docs/basic-concepts/payment-methods.mdx
@@ -6,7 +6,7 @@ description:
 
 Zūm Rails offers multiple payment methods depending on our agreement.
 
-![Zum Payment Methods](/img/docs/diagrams/payment_methods_v2.png)
+![Zūm Payment Methods](/img/docs/diagrams/payment_methods_v2.png)
 
 Method | Description | Duration | Send Funds | Request Funds
 -------| ----------- | -------- | ---------- | -----------
