--- a/docs/invoice-and-subscription/product.mdx
+++ b/docs/invoice-and-subscription/product.mdx
@@ -9,7 +9,7 @@ description:
 ## What is a product?
 
 Products represent the goods or services you offer to your users. You might also offer versions of your products. 
-Each product has a unique ID which is automatically generated when you create a product. When you create a product in Zum Rails, you have to provide a name. You can optionally add other attributes, like a description or image. 
+Each product has a unique ID which is automatically generated when you create a product. When you create a product in Zūm Rails, you have to provide a name. You can optionally add other attributes, like a description or image. 
 
 Because you can have multiple products, you’ll need to specify which product to use when creating Checkout links, Invoices or Subscriptions if you want to sell a specific product to the user. 
 
