--- a/docs/api-specification/idempotency.mdx
+++ b/docs/api-specification/idempotency.mdx
@@ -1,7 +1,7 @@
 ---
 title: Idempotency
 description:
-  What's sdempotency and how it works on Zum.
+  What's sdempotency and how it works on Zūm.
 ---
 
 # Idempotency
