--- a/docs/basic-concepts/zum-wallet.mdx
+++ b/docs/basic-concepts/zum-wallet.mdx
@@ -1,10 +1,10 @@
 ---
-title: Zum Wallet
+title: Zūm Wallet
 description:
- What is Zum Wallet and how it works.
+ What is Zūm Wallet and how it works.
 ---
 
-Zum wallet is a virtual account which is used to facilitate money movement from either your bank account to your users’ bank account or the opposite. You can see all activity involving your Zum wallet through the portal. 
+Zūm wallet is a virtual account which is used to facilitate money movement from either your bank account to your users’ bank account or the opposite. You can see all activity involving your Zūm wallet through the portal. 
 **Every Zūm Rails account comes with one Zūm Wallet**.
 
 The goal of the Zūm Wallet is to help you manage funds. You can preload the wallet for faster disbursement or collect multiple transactions and then send one aggregate transaction to your funding source, or split the funds.
@@ -15,4 +15,4 @@ If you are using the API, you will need the wallet ID to create transactions inv
 This wallet will have a new Id, however, if you are using the API you can continue using the old wallet Ids (to create transactions, recurrent transactions and request funds). We will automatically update your wallet id to the new one when needed.
 :::
 
-Learn more about Zum wallet [here](https://www.youtube.com/watch?v=fbQ7A2HuI0o)
+Learn more about Zūm wallet [here](https://www.youtube.com/watch?v=fbQ7A2HuI0o)
