--- a/docs/invoice-and-subscription/invoice.mdx
+++ b/docs/invoice-and-subscription/invoice.mdx
@@ -12,9 +12,9 @@ Standalone invoices contain items which are product prices that have a “one-ti
 
 Here’s how you can create an invoice:
 
-If your invoice is configured to be charged automatically to the user on the available payment method, Zum Rails will automatically finalize your invoice and attempt payment. 
+If your invoice is configured to be charged automatically to the user on the available payment method, Zūm Rails will automatically finalize your invoice and attempt payment. 
 Once the transaction for the payment is successful, the user will receive an invoice over their email confirming the same. 
-If your invoice is configured to be billed by sending an email to the user with a link to pay, then Zum Rails will email the invoice to your user and await payment. These emails will contain a link to a hosted page to pay the invoice. 
+If your invoice is configured to be billed by sending an email to the user with a link to pay, then Zūm Rails will email the invoice to your user and await payment. These emails will contain a link to a hosted page to pay the invoice. 
 
 Here’s what happens after the invoice has been created based on the payment selections:
 
@@ -32,10 +32,10 @@ Invoices can also be created using the checkout URL/SDK if you do not have your 
 A successful subscription flow looks like this:
  1. The invoice is created with status Open
  2. Based on the way of payment collection, the invoice will be either automatically charged to the user over the available payment method or the invoice will be emailed to the user to pay manually.
- 3. If the transaction to collect payment succeeds, Zum updates the status to paid, and the user receives an email with the invoice. 
+ 3. If the transaction to collect payment succeeds, Zūm updates the status to paid, and the user receives an email with the invoice. 
  4. If the transaction to collect payment fails, the invoice remains open.
 
 Draft invoices are still editable and remain unsent. At this point, you can finalize the invoice, or delete it.
-If the Invoice was created with the option “Automatically charge user”, Zum will initiate a transaction to collect the payment. If the transaction fails, the invoice will remain in the “open” status with the transaction status “failed”. We will not reinitiate the transaction at this stage. 
-If the Invoice was created with the option “Email invoice to user to pay manually”, Zum will wait for the user to initiate a transaction. 
+If the Invoice was created with the option “Automatically charge user”, Zūm will initiate a transaction to collect the payment. If the transaction fails, the invoice will remain in the “open” status with the transaction status “failed”. We will not reinitiate the transaction at this stage. 
+If the Invoice was created with the option “Email invoice to user to pay manually”, Zūm will wait for the user to initiate a transaction. 
 If the user pays the invoice and the payment is successful, the invoice updates to paid. If they don’t make a payment, the invoice will remain open until the due date is reached. Once the due date is reached, the invoice status will change to Past due. If the user tries to pay an invoice that is past due, they will still be able to make the payment. 
