patch - replace Zũm by Zūm

--- a/docs/api-specification/api-introduction.mdx
+++ b/docs/api-specification/api-introduction.mdx
@@ -50,7 +50,7 @@ For most uses-cases, our customers check if the response isError is true, if not
 
 ## Postman Collection
 
-Follow these steps to quickly get started with the Zũm Rails API:
+Follow these steps to quickly get started with the Zūm Rails API:
 
 Once you have access to your sandbox portal:
 
@@ -58,7 +58,7 @@ Once you have access to your sandbox portal:
 
 2) Download and install the Postman app
 
-3) Install the Zũm Rails Postman Collection. Click the "Run in Postman" button below to install
+3) Install the Zūm Rails Postman Collection. Click the "Run in Postman" button below to install
 
 4) In Postman find the endpoint /Authorize, paste your api username and password and it's all set.
 
