patch - card colors change

--- a/docs/ways-to-integrate/zum-connect.mdx
+++ b/docs/ways-to-integrate/zum-connect.mdx
@@ -179,7 +179,7 @@ The Iframe will display the products/prices to the user and they can choose what
 ### Event Listener
 When a new invoice is created through checkout, Zūm Connect will trigger an event to provide to your application the UserId, TransactionId or InvoiceId.
 
-To listen to the js event, your website must refer to Zūm Connect using an iFrame, and then your website should have the script/example described at the right.
+To listen to the js event, your website must refer to Zūm Connect using an iFrame, and then your website should have the script/example as described.
 
 Invoice checkout : `{origin: "ZUM_RAILS_IFRAME", InvoiceId: "c18dd952-...-9bd6a46eb1c4", UserId: "c18dd952-...-9bd6a46eb1c4", TransactionId: "c18dd952-...-9bd6a46eb1c4"}`
 
@@ -194,10 +194,11 @@ In case of subscription, a new invoice will be generated based on the billing cy
 :::
 
 ### Subscription checkout using URL
+
 ### Event Listener
 When a new subscription is created through checkout, Zūm Connect will trigger an event to provide to your application the UserId, TransactionId or subscriptionId.
 
-To listen to the js event, your website must refer to Zūm Connect using an iFrame, and then your website should have the script/example described at the right.
+To listen to the js event, your website must refer to Zūm Connect using an iFrame, and then your website should have the script/example as described.
 
 Subscription checkout : `{origin: "ZUM_RAILS_IFRAME", SubscriptionId: "c18dd952-...-9bd6a46eb1c4", UserId: "c18dd952-...-9bd6a46eb1c4"}`
 
