patch - finalize ways to integration

--- a/docs/ways-to-integrate/zum-connect.mdx
+++ b/docs/ways-to-integrate/zum-connect.mdx
@@ -207,3 +207,9 @@ Subscription checkout (EFT only) : `{origin: "ZUM_RAILS_IFRAME", UserId: "c18dd9
 :::note
 Each user will receive a link along with the emails for invoices or subscriptions which they can use to manage their account. If they initiate this flow on their own they will be asked to enter their email address > Zūm will check if that email address has any subscriptions/invoices under your customer account. If yes, we will send a one-time passcode to the users email which if matches with what the user enters in the UI, we will show them their Invoices, subscriptions, payment details
 :::
+
+## Manage subscriptions
+This library will allow the users to manage their subscriptions (view, cancel or update them). It consists of an iFrame website, hosted by Zūm Rails and referenced in your website.
+
+## Manage user account
+This library will allow the users to manage their account (view, cancel or update, pay for subscriptions/invoices). It consists of an iFrame website, hosted by Zūm Rails and referenced in your website. 
