patch - added image flows part 1

--- a/docs/invoice-and-subscription/invoice.mdx
+++ b/docs/invoice-and-subscription/invoice.mdx
@@ -18,6 +18,10 @@ If your invoice is configured to be billed by sending an email to the user with 
 
 Here’s what happens after the invoice has been created based on the payment selections:
 
+![Invoice flow charge user](/img/docs/diagrams/flows/flow6.png)
+
+![Invoice flow email user](/img/docs/diagrams/flows/flow7.png)
+
 <a name="void">Here’s how you can void invoices:</a>
 
 Voiding an invoice is conceptually similar to deleting (canceling) it. 
