--- a/docs/invoice-and-subscription/subscription.mdx
+++ b/docs/invoice-and-subscription/subscription.mdx
@@ -11,6 +11,7 @@ Subscription creation requires items which are product prices that have a “rec
 
 Here’s how you can create a subscription:
 
+
 Whenever a subscription is first created, the user will receive an email with the subscription details.
 If your subscription is configured to be charged automatically to the user on the available payment method, Zūm Rails will automatically finalize your invoice and attempt payment according to the billing cycle. 
 Once the transaction for the payment is successful, the user will receive an invoice over their email confirming the same. 
@@ -19,6 +20,9 @@ These emails will contain a link to a hosted page to pay the invoice.
 
 Here’s what happens after the subscription has been created based on the payment selections:
 
+![Subscription creation flow email user](/img/docs/diagrams/flows/flow10.png)
+![Subscription creation flow charge user](/img/docs/diagrams/flows/flow11.png)
+
 Zūm supports changing existing subscriptions without having to cancel and recreate them. Some of the most significant changes you might make are:
 - Changing the quantity of products within the subscription
 - Changing the method/way of payment collection
@@ -26,6 +30,7 @@ Zūm supports changing existing subscriptions without having to cancel and recre
 Changes are reflected with the next invoice generated as per the billing cycle of the user. 
 
 Here’s how you can update subscriptions:
+![Subscription update flow](/img/docs/diagrams/flows/flow7.png)
 
 By default, subscriptions and billing continue until cancellation. You can also cancel subscriptions yourself, either through the API or the Zūm Portal. 
 
